css/styles.css
body{
    min-height: 1vh;
    margin: 0;
    box-sizing: border-box;
    background-color: hsl(36, 100%, 99%);
    font-family: "Inter";
    font-size: 15px;
}
img{
    max-width: 100%;
}
header, main{
    background-color: hsl(36, 100%, 99%);
    padding: 1rem;
}
header{
    width: 100%;
    top: 0;
    position: fixed;
    z-index: 3;
    box-sizing: border-box;
    display: flex;
    justify-content: space-between;
}
header nav{
    min-width: 40px;
    display: flex;
    gap: 40px;
    background-position: right;
    background-repeat: no-repeat;
}
header nav div{
    align-self: flex-end;
}
header nav a{
    text-decoration: none;
    color: hsl(216, 13%, 42%);
}
header nav a:hover, header nav.opened a:hover{
    color: hsl(5, 85%, 63%);
}
main{
    margin-top: 72px;
    z-index: 0;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 30px;
}
main> .image{
    height: 300px;
    grid-column: 1/3;
    overflow: hidden;
    background: url("../assets/images/image-web-3-desktop.jpg");
    background-position: center;
    background-size: cover;
}
main> .image img{
    width: 100%;
    position: absolute;
}
.future{
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-column: span 2;
    grid-row: 2/3;
}
.future h1{
    margin: 1rem 0;
    font-size: 5em;
    line-height: .9em;
}
.future p{
    color: hsl(236, 13%, 42%);
}
.future button{
    padding: 1rem 2rem;
    margin-bottom: 2rem;
    border: none;
    background-color: hsl(5, 85%, 63%);
    font-weight: 800;
    letter-spacing: 5px;
    cursor: pointer;
}
.future button:hover{
    background-color: hsl(240, 100%, 5%);
    color: hsl(36, 100%, 99%);
}
.visually-hidden{
    display: none;
}
.news{
    grid-row: span 2;
    padding: 1rem;
    /* position: relative; */
    gap: 10px;
    background-color: hsl(240, 100%, 5%);
}
.news h2{
    margin: 0;
    color: hsl(35, 77%, 62%);
    font-size: 2em;
}
.news section{
    display: flex;
    flex-direction: column;
    gap: 20px;
}
.news article:nth-of-type(2){
    padding-top: 20px;
    border-top: 1px solid hsl(236, 13%, 42%);
    border-bottom: 1px solid hsl(236, 13%, 42%);
}
.news a{
    font-size: 1.25em;
    color: white;
    text-decoration: none;
    font-weight: 700;
}
.news a:hover{
    color: hsl(35, 77%, 62%);
}
.news p{
    color: hsl(236, 13%, 42%);
}

.ads{
    grid-column: span 3;
    padding-bottom: 3rem;
    margin-top: 4rem;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 30px;
}
.ads article{
    display: flex;
    align-items: center;
    gap: 30px;
}
.ads article picture{
    height: 100%;
    max-width: 100px;
}
.ads section h3{
    margin: 0;
    font-size: 2em;
    color: hsl(5, 85%, 63%);
}
.ads section h4{
    margin: 1em 0;
}
.ads section a{
    color: hsl(240, 100%, 5%);
    font-weight: 800;
    text-decoration: none;
}
.ads section a:hover{
    color: hsl(5, 85%, 63%);
}
.ads section p{
    margin: 0;
    color: hsl(236, 13%, 42%);
}
.attribution { font-size: 11px; text-align: center; }
.attribution a { color: hsl(228, 45%, 44%); }
@media only screen and (max-width:850px) {
    main> .image{
        grid-column: span 3;
    }
    .future{
        grid-column: span 3;
    }
    .news{
        grid-column: span 3;
        grid-row: span 1;
    }
    .news section{
        flex-direction: row;
    }
    .news article:nth-last-of-type(2){
        position: relative;
        border: 0;
    }
    .news article:nth-last-of-type(2)::before,.news article:nth-last-of-type(2)::after{
        content: "";
        display: block;
        position: absolute;
        height: 100%;
        width: 1px;
        background-color: hsl(236, 13%, 42%);
    }
    .news article:nth-last-of-type(2)::before{
        top: 0;
        left: -10px;
    }
    .news article:nth-last-of-type(2)::after{
        top: 0;
        right: -10px;
    }
}
@media only screen and (max-width:722px) {
    .future{
        display: block;
    }
    .future h1{
        font-size: 2em;
    }
    .news section{
        flex-direction: column;
    }
    .news article:nth-last-of-type(2)::before,.news article:nth-last-of-type(2)::after{
        display: none;
    }
    .news article:nth-of-type(2){
        border-top: 1px solid hsl(236, 13%, 42%);
        border-bottom: 1px solid hsl(236, 13%, 42%);
    }
    .ads{
        display: flex;
        flex-direction: column;
    }
}
@media only screen and (max-width:550px) {
    header.closed{
        animation-name: normalStateHeader;
    }main.closed{
        animation-name: normalStateMain;
    }
    header.opened{
        animation-name: headerBackground;
}
    header nav.opened{
        height: 100%;
        width: 13rem;
        padding: 1rem;
        box-sizing: border-box;
        position: fixed;
        z-index: 3;
        top: 0;
        flex-direction: column;
        background-color: hsl(36, 100%, 99%);
        cursor: default;
        animation-name: navOpenAnimation;
}
    header nav.closed{
        animation-name: navCloseAnimation;
    }
    header nav .open-close{
        width: 40px;
        height: 40px;
        display: block;
        background: url("../assets/images/icon-menu.svg");
        cursor: pointer;
    }
    header nav.closed .open-close{
        animation-name: buttonCloseAnimation;
    }
    header nav.opened .open-close{
        background: url("../assets/images/icon-menu-close.svg");
        background-position: center;
        background-repeat: no-repeat;
    }
    header nav a{
        display: none;
    }
    header nav.closed a{
        animation-name: navaCloseAnimation;
    }
    header nav.opened a{
        display: inline;
        color: hsl(240, 100%, 5%);
    }
    main.opened{
        background-color: hsl(36, 100%, 99%);
        animation-name: mainFilter;
    }    
    header.closed,main.closed,header.opened,main.opened,header nav.opened,header nav.closed,header nav.closed a,header nav .open-close,header nav.opened .open-close{
        animation-duration: 0.2s;
        animation-fill-mode: forwards;
    }
}
@keyframes navOpenAnimation{
    0%{
        right: -13rem;
    }
    100%{
        right: 0;
    }
}
@keyframes navCloseAnimation{
    0%{
        height: 100vh;
        width: 13rem;
        display: flex;
        padding: 1rem;
        flex-direction: column;
        position: absolute;
        box-sizing: border-box;
        z-index: 3;
        right: 0;
        top: 0;
        background-color: hsl(36, 100%, 99%);
    }
    99.99%{
        height: 100vh;
        width: 13rem;
        padding: 1rem;
        display: flex;
        flex-direction: column;
        position: absolute;
        box-sizing: border-box;
        z-index: 3;
        right: -13rem;
        top: 0;
        background-color: hsl(36, 100%, 99%);
    }
    100%{
        height: auto;
        width: auto;
        padding: 0;
        z-index: 3;
        position: relative;
        top: 0;
        right: 0;
        background: none;
    }
}
@keyframes buttonCloseAnimation{
    0%{
        background: url("../assets/images/icon-menu-close.svg");
        background-position: center;
        background-repeat: no-repeat;
    }
    99.99%{
        background: url("../assets/images/icon-menu-close.svg");
    }
    100%{
        background: url("../assets/images/icon-menu.svg");
    }
}
@keyframes navaCloseAnimation{
    0%{
        display: inline;
    }
    99.99%{
        display: inline;
    }
    100%{
        display: none;
    }
}
@keyframes headerBackground {
    0%{
        background-color: hsl(36, 100%, 99%);
    }
    100%{
        background-color: #807E7D;
    }
}
@keyframes mainFilter{
    0%{
        filter: brightness(1);
        -webkit-filter: brightness(1);
}
    100%{
        filter: brightness(.5);
        -webkit-filter: brightness(.5);
    }
}
@keyframes normalStateHeader{
    0%{
        background-color: #807E7D;;
    }
    100%{
        filter: brightness(1);
        -webkit-filter: brightness(1);
        background-color: hsl(36, 100%, 99%);
    }
}
@keyframes normalStateMain{
    0%{
        filter: brightness(.5); 
        -webkit-filter: brightness(.5);
}
    100%{
        filter: brightness(1);
        -webkit-filter: brightness(1);
    }
}

